--- a/index.html
+++ b/index.html
@@ -17,25 +17,30 @@
 <div id="corpo">
 
 
-<div id="left">
-	<p>Lorem ipsum iaculis himenaeos morbi at diam eget neque elementum felis tempus integer eleifend ut
-		lacus ornare nostra convallis, pulvinar viverra mauris porttitor mi lorem morbi sem congue pretium nibh
-		ante a ornare proin elit dictum. suscipit rutrum orci sed commodo diam enim habitasse metus, semper porttitor 
-		cras pellentesque porttitor id luctus. pretium in dui laoreet sapien nisl sem ad sollicitudin bibendum tellus 
-		bibendum rhoncus elementum, aenean sollicitudin conubia lectus lobortis nibh pellentesque blandit mattis eleifend 
-		lacinia facilisis. vestibulum nam tempus semper purus consequat nisl aptent neque, scelerisque aliquam massa
-		fringilla congue dolor netus ac risus, dapibus leo nunc lacinia tempus himenaeos bibendum. </p>
-</div>
-<div id="right">
 
-	<p>Lorem ipsum iaculis himenaeos morbi at diam eget neque elementum felis tempus integer eleifend ut
-		lacus ornare nostra convallis, pulvinar viverra mauris porttitor mi lorem morbi sem congue pretium nibh
-		ante a ornare proin elit dictum. suscipit rutrum orci sed commodo diam enim habitasse metus, semper porttitor 
-		cras pellentesque porttitor id luctus. pretium in dui laoreet sapien nisl sem ad sollicitudin bibendum tellus 
-		bibendum rhoncus elementum, aenean sollicitudin conubia lectus lobortis nibh pellentesque blandit mattis eleifend 
-		lacinia facilisis. vestibulum nam tempus semper purus consequat nisl aptent neque, scelerisque aliquam massa
-		fringilla congue dolor netus ac risus, dapibus leo nunc lacinia tempus himenaeos bibendum.</p>
-</div>
+
+	<div id="left">
+		<p>Lorem ipsum iaculis himenaeos morbi at diam eget neque elementum felis tempus integer eleifend ut
+			lacus ornare nostra convallis, pulvinar viverra mauris porttitor mi lorem morbi sem congue pretium nibh
+			ante a ornare proin elit dictum. suscipit rutrum orci sed commodo diam enim habitasse metus, semper porttitor 
+			cras pellentesque porttitor id luctus. pretium in dui laoreet sapien nisl sem ad sollicitudin bibendum tellus 
+			bibendum rhoncus elementum, aenean sollicitudin conubia lectus lobortis nibh pellentesque blandit mattis eleifend 
+			lacinia facilisis. vestibulum nam tempus semper purus consequat nisl aptent neque, scelerisque aliquam massa
+			fringilla congue dolor netus ac risus, dapibus leo nunc lacinia tempus himenaeos bibendum. </p>
+			<img src="Imagens/imagemGoogle.jpeg" >
+
+	</div>
+	<div id="right">
+
+		<p>Lorem ipsum iaculis himenaeos morbi at diam eget neque elementum felis tempus integer eleifend ut
+			lacus ornare nostra convallis, pulvinar viverra mauris porttitor mi lorem morbi sem congue pretium nibh
+			ante a ornare proin elit dictum. suscipit rutrum orci sed commodo diam enim habitasse metus, semper porttitor 
+			cras pellentesque porttitor id luctus. pretium in dui laoreet sapien nisl sem ad sollicitudin bibendum tellus 
+			bibendum rhoncus elementum, aenean sollicitudin conubia lectus lobortis nibh pellentesque blandit mattis eleifend 
+			lacinia facilisis. vestibulum nam tempus semper purus consequat nisl aptent neque, scelerisque aliquam massa
+			fringilla congue dolor netus ac risus, dapibus leo nunc lacinia tempus himenaeos bibendum.</p>
+			<img src="Imagens/imagemGoogle.jpeg">
+		</div>
 </div>
 <div id = "fundo">
 
