--- a/index.html
+++ b/index.html
@@ -17,17 +17,43 @@
 <div id="corpo">
 
 
+	<table border="1">
+		<tr>
+		<td>linha 1, célula 1</td>
+		<td>linha 1, célula 2</td>
+		<td>linha 2, célula 1</td>
+		<td>linha 2, célula 2</td>
+		</tr>
+		<tr>
+		<td>linha 2, célula 1</td>
+		<td>linha 2, célula 2</td>
+		<td>linha 2, célula 1</td>
+		<td>linha 2, célula 2</td>
+		</tr>
+		<tr>
+		<td>linha 2, célula 1</td>
+		<td>linha 2, célula 2</td>
+		<td>linha 2, célula 1</td>
+		<td>linha 2, célula 2</td>
+		</tr>
+		<tr>
+		<td>linha 2, célula 1</td>
+		<td>linha 2, célula 2</td>
+		<td>linha 2, célula 1</td>
+		<td>linha 2, célula 2</td>
+		</tr>
+		
+		</table>
 
 
 	<div id="left">
-		<p>Lorem ipsum iaculis himenaeos morbi at diam eget neque elementum felis tempus integer eleifend ut
-			lacus ornare nostra convallis, pulvinar viverra mauris porttitor mi lorem morbi sem congue pretium nibh
-			ante a ornare proin elit dictum. suscipit rutrum orci sed commodo diam enim habitasse metus, semper porttitor 
-			cras pellentesque porttitor id luctus. pretium in dui laoreet sapien nisl sem ad sollicitudin bibendum tellus 
-			bibendum rhoncus elementum, aenean sollicitudin conubia lectus lobortis nibh pellentesque blandit mattis eleifend 
-			lacinia facilisis. vestibulum nam tempus semper purus consequat nisl aptent neque, scelerisque aliquam massa
-			fringilla congue dolor netus ac risus, dapibus leo nunc lacinia tempus himenaeos bibendum. </p>
-			<img src="Imagens/imagemGoogle.jpeg" >
+		<ul> 
+			<li>convallis</li> 
+			<li>Oenean</li> 
+			<li>vestibulum</li> 
+			<li>dapibus</li>
+			<li>nunc</li>  
+		</ul>
 
 	</div>
 	<div id="right">
@@ -39,12 +65,12 @@
 			bibendum rhoncus elementum, aenean sollicitudin conubia lectus lobortis nibh pellentesque blandit mattis eleifend 
 			lacinia facilisis. vestibulum nam tempus semper purus consequat nisl aptent neque, scelerisque aliquam massa
 			fringilla congue dolor netus ac risus, dapibus leo nunc lacinia tempus himenaeos bibendum.</p>
-			<img src="Imagens/imagemGoogle.jpeg">
+			<img src="Imagens/imagem1.jpeg">
 		</div>
 </div>
 <div id = "fundo">
 
-<h1>todos direitos reservados</h1>
+<h1>Autor: Michel Fernandes, estudante de html,CSS</h1>
 
 </div>
 
