--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 
 <div id="header">
 
-	<H1>titulo</H1>
+	<h1>minha pagina em html/css</h1>
+
 					
 </div>
 	
 <div id="corpo">
-
-
 	<table border="1">
 		<tr>
 		<td>linha 1, célula 1</td>
@@ -58,13 +57,7 @@
 	</div>
 	<div id="right">
 
-		<p>Lorem ipsum iaculis himenaeos morbi at diam eget neque elementum felis tempus integer eleifend ut
-			lacus ornare nostra convallis, pulvinar viverra mauris porttitor mi lorem morbi sem congue pretium nibh
-			ante a ornare proin elit dictum. suscipit rutrum orci sed commodo diam enim habitasse metus, semper porttitor 
-			cras pellentesque porttitor id luctus. pretium in dui laoreet sapien nisl sem ad sollicitudin bibendum tellus 
-			bibendum rhoncus elementum, aenean sollicitudin conubia lectus lobortis nibh pellentesque blandit mattis eleifend 
-			lacinia facilisis. vestibulum nam tempus semper purus consequat nisl aptent neque, scelerisque aliquam massa
-			fringilla congue dolor netus ac risus, dapibus leo nunc lacinia tempus himenaeos bibendum.</p>
+		
 			<img src="Imagens/imagem1.jpeg">
 		</div>
 </div>
